flapivor/tests/tests-m3/hopix/typechecker/bad/external.hopix
extern p : int * bool -> int

val x : int = p (0, 1)